static/css/base.less
/* ... */
.body {
	margin: 0 0 0.5em 5em;
	dt { width: 33%; }
	dd { margin-left: 35%; }
	.para { margin-bottom: 0.5em; }
}

// layout
#black, #header {
	width: 100%;
	height: 86px;
}
#black {
	position: fixed;
	top: 0;
	left: 0;
	background: black;
	z-index: -1;
}
#header {
	position: fixed;
	top: 0;
	left: 0;
	padding: 1em 3%;
	background: fade(@google_blue, 80%);
	z-index: 2;
	box-shadow: 0 1px 10px rgba(0,0,0,0.5);
	h1 {
		position: relative;
		float: left;
		font-size: 3.2em;
		text-shadow: none;
		a {
			position: relative;
			color: white;
			&:hover {
				text-shadow: 0px 0px 25px white;
			}
		}
		span { position: absolute; top: -3px; right: 2px; font-size: 0.3em; color: #fff; }
		@media @mobile, @tablet { .hide; }
	}
	a.fa-home {
		.hide;
		color: white;
		.black_shadow;
		&:hover { color: @google_orange; }
		@media @mobile, @tablet { float: left; display: block; }
	}
}
#footer {
	position: absolute;
	bottom: 2em;
	color: @lighter;
	p { display: inline-block; }
	#langs {
		position: relative;
		margin: 1em 0;
		button {
			display: inline-block;
			margin-right: 1em;
			padding: 0 0.5em;
			height: 2em;
			color: white;
			background: transparent;
			font-weight: bold;
			text-transform: uppercase;
			cursor: pointer;
			&.current { background: @google_orange; }
			&:hover { background-color: @neutral; color: white; }
		}
	}
	@media @mobile, @tablet, @desktop { .hide; }
}

#wrapper {
	min-height: 100%;
	overflow: hidden;
	background: url(../images/front.png) no-repeat fixed;
}
label[data-function*='swipe'] {
	float: right;
    color: white;
	.transition(0.3s);
	.black_shadow;
	&:hover { color: @google_orange; }
}
input[data-function*='swipe'] {
	position: absolute;
	opacity: 0;
	&:checked ~ .menu, &:checked ~ #main {
		.transform(translate3d(@menuOffset,0,0));
	}
}

#main {
	padding: 8em 3% 0;
	min-height: 400px;
	.transform(translate3d(0,0,0));
	.transition(transform, .5s);
}
.menu {
	position: fixed;
	margin-top: 86px;
	top: 0;
	left: -@menuOffset;
	bottom: 0;
	width: @menuOffset;
	background: fade(black, 70%);
	padding: 1em 3% 0;
	z-index: 1;
	text-shadow: none;
	.transform(translate3d(0,0,0));
	.transition(transform, .5s);
	.hover {
		&:hover, &:focus { color: white; background: transparent; }
	}
	h3 { color: @google_orange; }
	a {
		color: @paper; .hover;
		&.selected { color: @google_orange; }
	}
	ul.fa-ul {
		margin: 1em 0;
		display: flex;
		flex-flow: row;
		justify-content: space-between;
		li {
			margin: 0;
			list-style: none;
			font-size: 3.6em;
			&.active a { color: @google_orange; .hover; }
		}
	}
	.submenu {
		a {
			display: inline;
			&.block {
				display: block;
				font-size: 1.2em;
				margin-bottom: 0.5em;
				text-transform: lowercase;
			}
		}
	}
}

#container {
	&.thumbnails {
		display: flex;
		flex-flow: row wrap;
		.perspective(1000px);
		margin: 0 -@gap/4;
		figure {
			flex: 1 1 220px;
			display: flex;
			justify-content: center;
			padding: 0 @gap/4 @gap/2 @gap/4;
			a {
				display: block;
				width: 100%;
				max-width: 300px;
				height: 220px;
				position: relative;
				overflow: hidden;
				border-radius: @radius;
				background-repeat: no-repeat;
				background-position: 50% 50%;
				background-size: 100% auto;
				.backface(hidden); // prevents jumping
				.transition(background-size .5s ease-in-out);
				p.legend {
					opacity: 0;
					position: absolute;
					left: 0;
					bottom: 50%;
					width: 100%;
					margin: 0;
					padding: 1em 0;
					line-height: 110%;
					text-align: center;
					background: fade(white, 50%);
					border-radius: 0 0 @radius @radius;
					.transition(all .3s ease-in-out);
				}
				&:hover, &:focus {
					background-size: 300px auto;
					& p.legend {
						opacity: 1;
						bottom: 0;
					}
				}
				@media @highdensity {
					height: 150px;
					max-width: 150px;
					background-size: 150px auto;
				}
			}
			@media @highdensity { flex: 1 1 150px; }
		}
	}
	&.cols {
		display: flex;
		flex-flow: row wrap;
		margin: 0 -@gap;
		section {
			flex: 1 1 350px;
			padding: 0 @gap @gap @gap;
			@media @mobile, @tablet { flex: 1 1 220px; }
		}
	}
	&.port {
		display: flex;
		flex-flow: row;
		margin: 0 -@gap;
		article {
			flex: 3;
			padding: 0 @gap @gap @gap;
			canvas { border-radius: @radius; }
		}
		aside {
			flex: 1;
			padding: 0 @gap @gap @gap;
			@media @mobile, @tablet { .hide; }
		}
	}
}
.comment, .exif { margin-bottom: 1em; }
.exif td a { text-decoration: underline; }

.subtitle {
	margin: 1em 0;
	@media @mobile, @tablet { .hide; }
}

nav.paginator {
	float: right;
	.black_shadow;
	a {
		.left;
		color: white;
		&:hover, &:focus { color: @google_orange; background: transparent; }
	}
	span {
		.left;
		color: white;
		&.na, &.number { color: fade(black, 70%); .white_shadow; }
		&.number { font-size: 4em; line-height: 1; }
	}
}

#searchForm {
	position: relative;
	margin: 1em 0;
	button {
		position: absolute;
		right: 0;;
		height: 2.4em;
		padding: .3em .8em;
		color: white;
		font-size: 1em;
		background: @google_orange;
		border-radius: 0 @radius @radius 0;
		&:hover { background-color: @neutral; }
	}
	input {
		width: 100%;
		padding: 0.1em 2em 0.1em 0.2em;
		border: none;
		background: white;
		color: black;
		font-size: 1.2em;
		height: 2em;
		border-radius: @radius;
		&:focus { outline: none; }
	}
	@media @mobile, @tablet, @desktop { .hide; }
}

.admin {
	margin-bottom: 1em;
	h3 { margin: 1em 0; }
	h4 { margin-bottom: 0.3em; padding: 0.4em 0; line-height: 100%; }
	button { float: right; width: 5em; margin-left: 0.5em; }
	.button {
		.default_button;
		border-radius: 0;
	}
	dl {
		margin-right: 5.5em;
		&.w65em {
			dt { width: 6.5em; }
			dd { margin-left: 6.5em; }
		}
	}
	dt { width: 75%; }
	dd { margin-left: 80%; }
	a {
		&.graph {
			float: right;
			border-radius: @radius;
		}
	}
}

.buttons {
	clear: both;
	margin: 1em 0;
	text-align: right;
	span { float: left; }
}
.error { color: white; }
.required { color: white; .black_shadow; }
/* ... */

